# fast-disk-cleaner

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.vue  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: delete_engine.rs  error.rs  lib.rs  main.rs  models.rs  scanner.rs  trash.rs
src/components/: DiskUsage.vue  ErrorToast.vue  FileList.vue  SettingsPanel.vue  TrashManager.vue
src/composables/: useI18n.ts  useScanner.ts  useSettings.ts  useTheme.ts
