[package]
name = "fast-disk-cleaner"
version = "0.1.0"
edition = "2021"

[lib]
name = "fast_disk_cleaner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri          = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell  = "2"

serde          = { version = "1", features = ["derive"] }
serde_json     = "1"

walkdir        = "2"
rayon          = "1"

chrono         = { version = "0.4", features = ["serde"] }
thiserror      = "1"
dirs           = "5"
windows-sys = { version = "0.61.2", features = ["Win32_Storage_FileSystem", "Win32_Foundation"] }
dashmap = "6.1.0"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
